Cluster/Obsidian/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-service
  namespace: obsidian
  labels:
    app: obsidian
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: obsidian
